<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/batteryStats_cv"
    style="@style/cardTheme"
    app:cardBackgroundColor="@color/white"
    app:cardElevation="2dp"
    app:cardMaxElevation="2dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true"
    app:contentPadding="5dp"
    app:contentPaddingBottom="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            style="@style/HeaderTheme"
            android:text="Battery Modes" />

        <include layout="@layout/line_divider" />

        <LinearLayout style="@style/cardLinearLayoutTheme">

            <ImageView
                android:id="@+id/nightMode_Icon"
                style="@style/cardImageTheme"
                android:src="@drawable/ic_build" />

            <TextView
                android:id="@+id/nightModeText"
                style="@style/cardItemTheme"
                android:layout_weight="1"
                android:text="WiFi Toggle Automation" />
        </LinearLayout>

        <include layout="@layout/line_divider" />

        <LinearLayout style="@style/cardLinearLayoutTheme">

            <ImageView
                android:id="@+id/lowWifiTrig_Icon"
                style="@style/cardImageTheme"
                android:src="@drawable/ic_build" />

            <TextView
                android:id="@+id/lowWifiTrigText"
                style="@style/cardItemTheme"
                android:layout_weight="1"
                android:text="@string/lowBatWiFiOff" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/lowWifiTrigSwitch"
                style="@style/cardSwitchTheme" />

        </LinearLayout>

        <include layout="@layout/line_divider" />

        <LinearLayout style="@style/cardLinearLayoutTheme">

            <ImageView
                android:id="@+id/lowBatBtl_Icon"
                style="@style/cardImageTheme"
                android:src="@drawable/ic_build" />

            <TextView
                android:id="@+id/lowBatBtlText"
                style="@style/cardItemTheme"
                android:layout_weight="1"
                android:text="@string/lowBatTurnOffbtl" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/lowBatBtlSwitch"
                style="@style/cardSwitchTheme" />

        </LinearLayout>

        <include layout="@layout/line_divider" />

        <LinearLayout style="@style/cardLinearLayoutTheme">

            <ImageView
                android:id="@+id/lowBatMute_icon"
                style="@style/cardImageTheme"
                android:src="@drawable/ic_build" />

            <TextView
                android:id="@+id/lowBatMuteText"
                style="@style/cardItemTheme"
                android:layout_weight="1"
                android:text="@string/lowBatSilentMode" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/lowBatMuteSwitch"
                style="@style/cardSwitchTheme" />

        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>